[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
tokio = { version = "1", features = ["full"] }

# rustls = { version = "0.23.10", default-features = false, features = ["std", "ring"] }
# rustls-pemfile = "2.1.2"
# tokio-rustls = { version = "0.26.0", default-features = false }
# tokio-native-tls = "0.3.0"
